tests/baselines/reference/parserGreaterThanTokenAmbiguity15.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity15.ts(1,1): error TS2364: The left-hand side of an assignment expression must be a variable or a property access.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity15.ts (1 errors) ====
    1 
    ~
!!! error TS2364: The left-hand side of an assignment expression must be a variable or a property access.
    // before
    >>= // after
    2;